# 360camera

./: pyproject.toml  requirements.txt  test.py
apps/camera/: api.py  main.py
apps/camera_cli/: api.py  main.py
apps/supervisor/: main.py
lib/camera/: protocol.py
lib/rpc/: decorators.py  executor.py  protocol.py  server.py
lib/rpc/connection/: __init__.py  channel.py  null.py  tcp.py
lib/supervisor/: protocol.py
src/apps/camera/: api.py  cli.py  main.py
src/apps/supervisor/: main.py
src/camera360/apps/camera/: api.py  cli.py  legacy.py  main.py  rockchip.py  settings.py
src/camera360/apps/camera/api/: __init__.py
src/camera360/apps/camera/api/fake/: __init__.py  device.py  encoder.py  preview.py
src/camera360/apps/camera/api/v4l2_rockchip_v3/: __init__.py  device.py  encoder.py  preview.py
src/camera360/apps/gui/: app.py  controls.py  main.py
src/camera360/apps/supervisor/: main.py  settings.py
src/camera360/lib/camera/: controls.py  device.py  protocol.py
src/camera360/lib/rpc/: decorators.py  executor.py  protocol.py  server.py
src/camera360/lib/rpc/connection/: channel.py
src/camera360/lib/supervisor/: protocol.py
src/lib/camera/: protocol.py
src/lib/rpc/: executor.py
src/lib/rpc/connection/: __init__.py
tests/: conftest.py  test_lib_rpc.py  test_protocol_parsing.py  test_rpc_communication.py
